added cube calibration and fixed bugs

--- a/resources/calibration/bed_leveling/bed_leveling.html
+++ b/resources/calibration/bed_leveling/bed_leveling.html
@@ -57,7 +57,7 @@
         <tbody>
             <tr>
                 <td style="text-align: center; padding-bottom: 10px;">
-                    <img src="./CR3D_logo.svg" alt="CR3D Logo" style="max-width: 200px;">
+                    <img src="./CR-3D_Logo.png" alt="CR3D Logo" style="max-width: 200px;">
                     <h1 style="text-align: center; color: #1A7476;">Bed Level Calibration</h1>
                 </td>
             </tr>
