--- a/resources/calibration/filament_temp/filament_temp.html
+++ b/resources/calibration/filament_temp/filament_temp.html
@@ -59,12 +59,12 @@
 		<tbody>
 			<tr>
 				<td style="text-align: center; padding-bottom: 10px;">
-					<img src="./CR3D_logo.svg" alt="CR3D Logo" style="max-width: 200px;">
+					<img src="./CR-3D_Logo.png" alt="CR3D Logo" style="max-width: 200px;">
 					<h1 style="text-align: center; color: #1A7476;">Filament Temperature Calibration</h1>
 				</td>
 			</tr>
 			<tr>
-				<td style="text-align: right;">
+				<td style="text-align: center;">
 					<table>
 						<tr>
 							<td class="bold-big">Needs:</td>
