--- a/resources/calibration/cr3d/samplecard/index.html
+++ b/resources/calibration/cr3d/samplecard/index.html
@@ -2,11 +2,86 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>CR-3D Sample Keycard & Tray</title>
+	<title>Bed Level Calibration</title>
+	<style>
+		body {
+			font-family: 'Your Preferred Font', sans-serif;
+			background-color: #f0f0f0; /* Set your desired background color */
+			color: #293133; /* Set your desired font color */
+			padding-left: 15px;
+		}
+
+		h1, h2 {
+			color: #1A7476; /* Adjust color as needed */
+		}
+
+		.calibration-title {
+			color: #ff0000; /* Set your desired color for the calibration title */
+		}
+
+		table {
+			border-collapse: collapse;
+			width: 100%;
+		}
+
+		th, td {
+			border: 1px solid #dddddd;
+			text-align: center;
+			padding: 8px;
+		}
+
+		th {
+			background-color: #f2f2f2;
+		}
+
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+
+		p {
+			line-height: 1.5;
+		}
+
+		ul {
+			list-style-type: none;
+			padding: 0;
+		}
+
+			ul li {
+				margin-bottom: 10px;
+			}
+
+		.bold-big {
+			font-weight: bold;
+			font-size: 1.2em; /* Set your desired font size */
+		}
+	</style>
 </head>
 <body>
-	<h1>CR-3D Sample Keycard & Tray</h1>
-
+	<table width="100%">
+		<tbody>
+			<tr>
+				<td style="text-align: center; padding-bottom: 10px;">
+					<img src="./CR-3D_Logo.png" alt="CR3D Logo" style="max-width: 200px;">
+					<h1 style="text-align: center; color: #1A7476;">CR-3D Samplecard</h1>
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align: right;">
+					<table>
+						<tr>
+							<td class="bold-big">Needs:</td>
+							<td style="text-align: left;">Nothing</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+		</td>
+		</tr>
+		</tbody>
+	</table>
 	<div>
 		<p>Thank you for printing this sample card with our CR-3D high-performance filament</p>
 		<p><img src="cards.png" /></p>
@@ -17,11 +92,11 @@
 				<li>10mm and 5mm Holes
 				<li>45&#xB0; overhang test
 				<li>a small bridging test
-				<li>different transparency tests (0,4mm / 0,6mm / 0,8mm / 1,0mm / 1,2mm)	
+				<li>different transparency tests (0,4mm / 0,6mm / 0,8mm / 1,0mm / 1,2mm)
 			</ul>
 		</p>
 		<p> You need about 6-8g (for example 2m PLA) of our Filament for one part.</p>
-		<p>There is also a suitable Tray for the Cards.</p/>
+		<p>There is also a suitable Tray for the Cards.</p>
 		<p><img src="tray.png" /></p>
 	</div>
 
